# xorq-template-penguins

./: .envrc  expr.ipynb  expr.py  pyproject.toml  requirements.txt
src/xorq_template_penguins/: __init__.py
