[project]
name = "xorq-template-penguins"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "pins[gcs]>=0.9.0",
    "scikit-learn>=1.7.0",
    "xorq[duckdb]>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
